Conexion con los articulos

--- a/templates/regVenta.html
+++ b/templates/regVenta.html
@@ -35,11 +35,11 @@
                 <h5>Gladiator's</h5>
             </section>
             <section class="secciones">
-                <a href="./index.html">Inicio</a>
+                <a href="/">Inicio</a>
                 <a href="./pages/index.html">Ventas</a>
-                <a href="./pages/index.html">Productos</a>
-                <a href="./pages/index.html">Usuarios</a>
-                <a href="./pages/index.html">Soporte</a>
+                <a href="consultar_usuario">Productos</a>
+                <a href="./consultarUsuario.html">Usuarios</a>
+                <a href="{{ url_for('consultar_usuario')}}">Soporte</a>
                 <a href="./pages/index.html">Cerrar Sesión</a>
             </section>
         </nav>
