--- a/templates/regVenta.html
+++ b/templates/regVenta.html
@@ -35,12 +35,12 @@
                 <h5>Gladiator's</h5>
             </section>
             <section class="secciones">
-                <a href="/">Inicio</a>
+                <a href="{{ url_for('registrar_usuario')}}">Inicio</a>
                 <a href="./pages/index.html">Ventas</a>
                 <a href="consultar_usuario">Productos</a>
                 <a href="./consultarUsuario.html">Usuarios</a>
                 <a href="{{ url_for('consultar_usuario')}}">Soporte</a>
-                <a href="./pages/index.html">Cerrar Sesión</a>
+                <a href="{{ url_for('registrar_usuario')}}">Cerrar Sesión</a>
             </section>
         </nav>
     </header>
