--- a/templates/regUsuario.html
+++ b/templates/regUsuario.html
@@ -38,74 +38,55 @@
                 <a href="./pages/index.html">Inicio</a>
                 <a href="./pages/index.html">Ventas</a>
                 <a href="./pages/index.html">Productos</a>
-                <a href="./pages/index.html">Usuarios</a>
-                <a href="./pages/index.html">Soporte</a>
+                <a href="{{ url_for('editar_usuario') }}">Usuarios</a>
+                <a href="{{ url_for('consultar_usuarios') }}">Soporte</a>
                 <a href="./pages/index.html">Cerrar Sesión</a>
             </section>
         </nav>
     </header>
     <h1>Registrar Usuario</h1>
-    <section class="barra_busqueda">
-        <!-- Aqui se encuentra la barra de busqueda -->
-        <form class="textbox" action="/search" method="GET">
-            <input type="text" name="buscar" placeholder="Buscar...">
-            <button type="submit">Buscar</button>
-            <svg class="icon" width="24" height="24" viewBox="0 0 24 24">
-            <!-- SVG content -->
-            </svg>
-            <svg class="icon" width="24" height="24" viewBox="0 0 24 24">
-            <!-- SVG content -->
-            </svg>
-        </form>
-    </section>
-    <br> <br>
     <main>
+        <form action="{{ url_for('registrar_usuario_post') }}" method="POST">
         <section class="label">
-            <label for="nombre">id Usuario:</label>
-            <input type="text" id="id usuario" name="id" autocomplete="id usuario" required>
-            <br><br>
             <label for="nombre">Nombre:</label>
-            <input type="text" id="nombre" name="nombre" autocomplete="name" required>
+            <input type="text" id="nombre" name="nombre" required>
             <br><br>
-            <label for="nombre">Apellido Paterno:</label>
-            <input type="double" id="apellido paterno" name="apellido paterno"" autocomplete="apellido paterno"" required>
+            <label for="apellido_paterno">Apellido Paterno:</label>
+            <input type="text" id="apellido_paterno" name="apellido_paterno" required>
             <br><br>
-            <label for="nombre">Apellido Materno:</label>
-            <input type="int" id="apellido materno" name="apellido materno" autocomplete="apellido materno" required>
+            <label for="apellido_materno">Apellido Materno:</label>
+            <input type="text" id="apellido_materno" name="apellido_materno" required>
             <br><br>
-        </section>
-        <section class="label">
-            <label for="nombre">Nombre de Usuario:</label>
-            <input type="int" id="nombre de usuario" name="nombre de usuario" autocomplete="nombre de usuario" required>
+            <label for="domicilio">Domicilio:</label>
+            <input type="text" id="domicilio" name="domicilio" required>
             <br><br>
-            <label for="nombre">Contraseña:</label>
-            <input type="int" id="contraseña" name="contraseña" autocomplete="contraseña" required>
+            <label for="numero_telefonico">Número telefónico:</label>
+            <input type="text" id="numero_telefonico" name="numero_telefonico" required>
             <br><br>
-            <label for="nombre">Domicilio:</label>
-            <input type="int" id="domicilio" name="domicilio" autocomplete="domicilio" required>
+            <label for="curp">CURP:</label>
+            <input type="text" id="curp" name="curp" required>
             <br><br>
-            <label for="nombre">Número teléfonico:</label>
-            <input type="int" id="número teléfonico" name="número teléfonico" autocomplete="número teléfonico" required>
+            <label for="correo_electronico">Correo electrónico:</label>
+            <input type="email" id="correo_electronico" name="correo_electronico" required>
             <br><br>
-        </section>
-        <section class="label">
-            <label for="nombre">Correo electronico:</label>
-            <input type="int" id="correo electronico" name="correo electronico" autocomplete="correo electronico" required>
-            <br><br>
-            <label for="curp"> CURP:</label>
-            <input type="text" id="nombre" name="nombre" autocomplete="name" required>
-            <br><br>
-            <label for="tipos de usuario">Tipo de usuario </label>
-            <select name="tipos de usuario" id="tipo de usuario">
-            <option value="cajero">Cajero</option>
-            <option value="administrador">Administrador </option>
+            <label for="tipos_de_usuario">Tipo de usuario:</label>
+            <select name="tipos_de_usuario" id="tipos_de_usuario">
+                <option value="cajero">Cajero</option>
+                <option value="administrador">Administrador</option>
             </select>
             <br><br>
-            <label for="mes">Selecciona fecha</label>
-            <input type="month" name="mes" id="mes">
+            <label for="mes">Selecciona fecha de contratación:</label>
+            <input type="date" name="date" id="date">
+            <br><br>
+            <label for="nombre_usuario">Nombre de Usuario:</label>
+            <input type="text" id="nombre_usuario" name="nombre_usuario" required>
+            <br><br>
+            <label for="contraseña">Contraseña:</label>
+            <input type="password" id="contraseña" name="contraseña" required>
             <br><br>
         </section>
-        <button class="blog-button" type="submit"><b>Registrar</b></button>
-        </main>
+        <button type="submit">Registrar</button>
+    </form>
+    </main>
 </body>
 </html>
