--- a/templates/regVenta.html
+++ b/templates/regVenta.html
@@ -35,7 +35,7 @@
                 <h5>Gladiator's</h5>
             </section>
             <section class="secciones">
-                <a href="{{ url_for('registrar_usuario')}}">Inicio</a>
+                <a href="{{ url_for('consultar_usuarios')}}">Inicio</a>
                 <a href="./pages/index.html">Ventas</a>
                 <a href="consultar_usuario">Productos</a>
                 <a href="./consultarUsuario.html">Usuarios</a>
