--- a/templates/regVenta.html
+++ b/templates/regVenta.html
@@ -39,7 +39,7 @@
                 <a href="./pages/index.html">Ventas</a>
                 <a href="consultar_usuario">Productos</a>
                 <a href="./consultarUsuario.html">Usuarios</a>
-                <a href="{{ url_for('consultar_usuario')}}">Soporte</a>
+                <a href="{{ url_for('consultar_usuarios')}}">Soporte</a>
                 <a href="{{ url_for('registrar_usuario')}}">Cerrar Sesión</a>
             </section>
         </nav>
