--- a/templates/consultarUsuario.html
+++ b/templates/consultarUsuario.html
@@ -45,22 +45,25 @@
             </section>
         </nav>
     </header>
-    <div class="gbox"></div>
-<p class="text">Perfil</p>
+    <div class="gbox">
+        <img src="{{ url_for('static', filename=usuario[3]) }}" alt="Foto del Usuario" style="width: 200PX;">
+    </div>
+<p class="text">{{ usuario[1] }}</p>
+<p class="text" style="background-color: aqua;">{{ usuario[10] }}</p>
 <a href="{{ url_for('update1_usuario', id_usuario=usuario[0]) }}" class="button-1">Editar</a>
 <a href="{{ url_for('consultar_usuarios') }}" class="button-2">Regresar</a>
 <hr class="line">
-<p class="informacion">ID: {{ usuario[0] }}</p>
-<p class="informacion2">Nombre: {{ usuario[1] }}</p>
-<p class="informacion3">Apellido Paterno: {{ usuario[2] }}</p>
-<p class="informacion4">Apellido Materno: {{ usuario[3] }}</p>
-<p class="informacion5">Domicilio: {{ usuario[6] }}</p>
-<p class="informacion6">Número de teléfono: {{ usuario[7] }}</p>
-<p class="informacion7">Nombre de Usuario: {{ usuario[4] }}</p>
-<p class="informacion8">CURP: {{ usuario[8] }}</p>
-<p class="informacion9">Tipo de Usuario: {{ usuario[5] }}</p>
-<p class="informacion10">Fecha de contratación: {{ usuario[9] }}</p>
-<p class="informacion11">Contraseña: {{ usuario[10] }}</p>
-<p class="informacion12">Correo electrónico: {{ usuario[11] }}</p>
+<p class="informacion">ID: {{ usuario[4] }}</p>
+<p class="informacion2">Nombre: {{ usuario[5] }}</p>
+<p class="informacion3">Apellido Paterno: {{ usuario[6] }}</p>
+<p class="informacion4">Apellido Materno: {{ usuario[7] }}</p>
+<p class="informacion5">Domicilio: {{ usuario[8] }}</p>
+<p class="informacion6">Número de teléfono: {{ usuario[9] }}</p>
+<p class="informacion7">Nombre de Usuario: {{ usuario[10] }}</p>
+<p class="informacion8">CURP: {{ usuario[11] }}</p>
+<p class="informacion9">Tipo de Usuario: {{ usuario[12] }}</p>
+<p class="informacion10">Fecha de contratación: {{ usuario[13] }}</p>
+<p class="informacion11">Contraseña: {{ usuario[14] }}</p>
+<p class="informacion12">Correo electrónico: {{ usuario[15] }}</p>
 </body>
 </html>
