--- a/templates/consultarUsuarios.html
+++ b/templates/consultarUsuarios.html
@@ -54,7 +54,7 @@
         </form>
             <svg class="icon" width="24" height="24" viewBox="0 0 24 24">
             <!-- !SVG content  -->
-            </svg>
+           </svg>
             <svg class="icon" width="24" height="24" viewBox="0 0 24 24">
             <!-- SVG content  -->
             </svg>
@@ -85,14 +85,19 @@
                                     <td>{{ fila[3] }}</td>
                                     <td>{{ fila[4] }}</td>
                                     <td>
-                                        <form action="{{ url_for('update1_usuario', id_usuario=fila[0]) }}" method="POST" style="display:inline;">
+                                        <!-- <form action="{{ url_for('update1_usuario', id_usuario=fila[0]) }}" method="POST" style="display:inline;">
+                                            <button type="submit" class="boton-2">Editar</button>
+                                        </form> -->
+                                        <form action="{{ url_for('update1_usuario', id_usuario=fila[0]) }}" method="GET" style="display:inline;">
                                             <button type="submit" class="boton-2">Editar</button>
                                         </form>
+
                                         <form action="{{ url_for('delete_usuario', id_usuario=fila[0]) }}" method="POST" style="display:inline;">
                                             <button type="submit" class="boton-2">Eliminar</button>
                                         </form>
                                         <a href="{{ url_for('consultar_usuario', id_usuario=fila[0]) }}" class="boton-2">Ver</a>
                                     </td>
+
                                 </tr>
                             {% else %}
                                 <tr>
