--- a/templates/editarUsuario.html
+++ b/templates/editarUsuario.html
@@ -10,17 +10,55 @@
 </head>
 <body>
     <div class="container-fluid">
-        <h2>Edición de nombre del usuario</h2>
-        <br>
-         {% for usuario in datos %}
-        <form action="{{ url_for('update2_usuario', id_usuario=usuario[0]) }}" method="post">
-            <input type="hidden" name="id" value="{{ usuario[0] }}">
-            <label for="Nombre">Nombre de usuario</label>
-            <input type="text" name="nombre" value="{{ usuario[1] }}">
-            <input type="submit" value="Actualizar">
-            <a href="{{ url_for('index') }}">Cancelar</a>
-        </form>
-        {% endfor %}
-    </div>
+    <h2>Edición de nombre del usuario</h2>
+    <br>
+    <form action="{{ url_for('update_usuario_post', id_usuario=datos[0]) }}" method="POST" enctype="multipart/form-data">
+        <section class="label">
+            <label for="nombre">Nombre:</label>
+            <input type="text" id="nombre" name="nombre" value="{{ datos[1] }}" required>
+            <br><br>
+            <label for="apellido_paterno">Apellido Paterno:</label>
+            <input type="text" id="apellido_paterno" name="apellido_paterno" value="{{ datos[2] }}" required>
+            <br><br>
+            <label for="apellido_materno">Apellido Materno:</label>
+            <input type="text" id="apellido_materno" name="apellido_materno" value="{{ datos[3] }}" required>
+            <br><br>
+            <label for="domicilio">Domicilio:</label>
+            <input type="text" id="domicilio" name="domicilio" value="{{ datos[4] }}" required>
+            <br><br>
+            <label for="numero_telefonico">Número telefónico:</label>
+            <input type="text" id="numero_telefonico" name="numero_telefonico" value="{{ datos[5] }}" required>
+            <br><br>
+            <label for="curp">CURP:</label>
+            <input type="text" id="curp" name="curp" value="{{ datos[6] }}" required>
+            <br><br>
+            <label for="correo_electronico">Correo electrónico:</label>
+            <input type="email" id="correo_electronico" name="correo_electronico" value="{{ datos[11] }}" required>
+            <br><br>
+            <label for="tipos_de_usuario">Tipo de usuario:</label>
+            <select name="tipos_de_usuario" id="tipos_de_usuario">
+                <option value="cajero" {% if datos[8] == 'cajero' %}selected{% endif %}>Cajero</option>
+                <option value="administrador" {% if datos[8] == 'administrador' %}selected{% endif %}>Administrador</option>
+            </select>
+            <br><br>
+            <label for="date">Selecciona fecha de contratación:</label>
+            <input type="date" name="date" id="date" value="{{ datos[9].strftime('%Y-%m-%d') }}">
+            <br><br>
+            <label for="nombre_usuario">Nombre de Usuario:</label>
+            <input type="text" id="nombre_usuario" name="nombre_usuario" value="{{ datos[7] }}" required>
+            <br><br>
+            <label for="contraseña">Contraseña:</label>
+            <input type="password" id="contraseña" name="contraseña" value="{{ datos[10] }}" required>
+            <br><br>
+            <label for="imagen">Imagen:</label>
+            <input type="file" id="imagen" name="imagen">
+            <br><br>
+            <!-- Mostrar la imagen actual -->
+            <img src="{{ url_for('static', filename=datos[12]) }}" alt="Imagen actual" style="max-width: 200px;">
+            <br><br>
+        </section>
+        <button type="submit">Actualizar</button>
+    </form>
+</div>
 </body>
 </html>
