--- a/templates/consultarUsuario.html
+++ b/templates/consultarUsuario.html
@@ -39,7 +39,7 @@
                 <a href="./pages/index.html">Inicio</a>
                 <a href="./pages/index.html">Ventas</a>
                 <a href="./pages/index.html">Productos</a>
-                <a href="{{ url_for('registrar_usuario')}}">Usuarios</a>
+                <a href="{{ url_for('registrar_usuario_post')}}">Usuarios</a>
                 <a href="./pages/index.html">Soporte</a>
                 <a href="./pages/index.html">Cerrar Sesión</a>
             </section>
