--- a/templates/login.html
+++ b/templates/login.html
@@ -46,7 +46,7 @@
     </header>
     <main class="main">
         <div class="login-container">
-            <form action="login" method="">
+            <form action="/login" method="POST">
                 <h2>Iniciar Sesión</h2><br>
                 <input type="email" name="email" placeholder="Usuario"> 
                 <input type="password" name="password" placeholder="Contraseña">
