--- a/templates/regUsuario.html
+++ b/templates/regUsuario.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="/static/registrar.CSS">
     <link rel="stylesheet" href="/static/assets/font/flaticon.css">
     <link rel="stylesheet" href="/static/style.css">
+    <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" rel="stylesheet">
 </head>
 <body>
     <header>
@@ -38,7 +39,7 @@
                 <a href="./pages/index.html">Inicio</a>
                 <a href="./pages/index.html">Ventas</a>
                 <a href="./pages/index.html">Productos</a>
-                <a href="{{ url_for('editar_usuario') }}">Usuarios</a>
+                <a href="{{ url_for('registrar_usuario') }}">Usuarios</a>
                 <a href="{{ url_for('consultar_usuarios') }}">Soporte</a>
                 <a href="./pages/index.html">Cerrar Sesión</a>
             </section>
@@ -46,7 +47,25 @@
     </header>
     <h1>Registrar Usuario</h1>
     <main>
-        <form action="{{ url_for('registrar_usuario_post') }}" method="POST" enctype="multipart/form-data">
+        <div class="container mt-5">
+        {% with messages = get_flashed_messages(with_categories=true) %}
+            {% if messages %}
+                {% for category, message in messages %}
+                    <div class="alert alert-{{ category }} alert-dismissible fade show" role="alert">
+                        {{ message }}
+                        <button type="button" class="close" data-dismiss="alert" aria-label="Close">
+                            <span aria-hidden="true">&times;</span>
+                        </button>
+                    </div>
+                {% endfor %}
+            {% endif %}
+        {% endwith %}
+        <!-- Tu formulario de registro aquí -->
+    </div>
+    <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.bundle.min.js"></script>
+
+        <form action="{{ url_for('registrar_usuario') }}" method="POST" enctype="multipart/form-data">
         <section class="label">
             <label for="nombre">Nombre:</label>
             <input type="text" id="nombre" name="nombre" required>
