--- a/templates/repDiario.html
+++ b/templates/repDiario.html
@@ -4,9 +4,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Reporte Diario Gladiator's</title>
-    <link rel="stylesheet" href="../../Index_General/style.css">
-    <link rel="stylesheet" type="text/css"   href="../../styles/font/flaticon.css">
-    <link rel="stylesheet" href="../Ventas CSS/repVenta.CSS">
+    <link rel="stylesheet" href="../static/assets/font/flaticon.css">
+    <link rel="stylesheet" href="../static/style.css">
+    <link rel="stylesheet" href="../static/repVenta.CSS">
 </head>
 <body>
     <header>
@@ -31,7 +31,7 @@
         <nav>
             <!-- Aqui va el logo y nombre de la tienda y el nombre de las secciones -->
             <section class="logo-gladiators">
-                <a href="index.html"><img src="../../assets/img/Logotipo_GladiatorsTransparente.png" alt="imagen-logo"></a>
+                <a href="index.html"><img src="../static/assets/img/Logotipo_GladiatorsTransparente.png" alt="imagen-logo"></a>
                 <h5>Gladiator's</h5>
             </section>
             <section class="secciones">
@@ -48,6 +48,12 @@
         <h1>Reportes de las Ventas Diarias</h1>
         <section class="table_ventas">
             <!-- Aqui va la tabla de las ventas diarias -->
+             <br><br><br><br><br><br><br><br>
+             <h3>Seleccione la fecha:</h3>
+            <form method="GET" action="{{ url_for('reporte_diario') }}">
+                <input type="date" name="fecha" required>
+                <button type="submit">Buscar</button>
+            </form>
             <table>
                 <thead>
                     <tr class="fila">
@@ -56,45 +62,33 @@
                     <th>Hora</th>
                     <th>Total</th>
                     <th>Cajero</th>
+                    <th></th>
                     </tr>
                 </thead>
                 <tbody>
+                    {% if datos %}
+                        {% for fila in datos %}
                     <tr>
-                        <td>64331857219</td>
-                        <td>16/06/2024</td>
-                        <td>9:40a.m</td>
-                        <td>80.0</td>
-                        <td>Grisel</td>
+                        <td>{{ fila[0] }}</td>
+                        <td>{{ fila[1] }}</td>
+                        <td>{{ fila[2] }}</td>
+                        <td>{{ fila[3] }}</td>
+                        <td>{{ fila[4] }}</td>
+                        <td><button>Ver</button></td>
                     </tr>
+                {% endfor %}
+            {% else %}
                     <tr>
-                        <td>64331857220</td>
-                        <td>16/06/2024</td>
-                        <td>10:20a.m</td>
-                        <td>3.50</td>
-                        <td>Larisa</td>
+                        <td colspan="5">No se encontraron ventas</td>
                     </tr>
-                    <tr>
-                        <td>64331857221</td>
-                        <td>16/06/2024</td>
-                        <td>12:40p.m</td>
-                        <td>50.0</td>
-                        <td>Larisa</td>
-                    </tr>
+                    {% endif %}
                 </tbody>
             </table>
             <div class="boton-total">
             <!-- Aqui va el total y el boton para descargar -->
-            <h3>Total: $520</h3>
+            <h3>Total: ${{ total }}</h3>
             <a href="ruta/al/archivo.ext" download="nombre_del_archivo.ext" class="descargar-boton">Descargar</a>
         </div>
         </section>
-        <!-- Solo es prueba  -->
-        <!-- Solo es prueba  -->
-        <!-- Solo es prueba  -->
-        <!-- Solo es prueba  -->
-        <!-- Solo es prueba  -->
-        <!-- Solo es prueba  -->
-        <!-- Solo es prueba  -->
-        <!-- Solo es prueba  -->
     </main>
 </body>
