--- a/templates/repSemanal.html
+++ b/templates/repSemanal.html
@@ -4,9 +4,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Reporte Semanal Gladiator's</title>
-    <link rel="stylesheet" href="../../Index_General/style.css">
-    <link rel="stylesheet" type="text/css"   href="../../styles/font/flaticon.css">
-    <link rel="stylesheet" href="../Ventas CSS/repVenta.CSS">
+    <link rel="stylesheet" href="../static/assets/font/flaticon.css">
+    <link rel="stylesheet" type="text/css"   href="../static/style.css">
+    <link rel="stylesheet" href="../static/repVenta.CSS">
 </head>
 <body>
     <header>
@@ -31,7 +31,7 @@
         <nav>
             <!-- Aqui va el logo y nombre de la tienda y el nombre de las secciones -->
             <section class="logo-gladiators">
-                <a href="index.html"><img src="../../assets/img/Logotipo_GladiatorsTransparente.png" alt="imagen-logo"></a>
+                <a href="index.html"><img src="../static/assets/img/Logotipo_GladiatorsTransparente.png" alt="imagen-logo"></a>
                 <h5>Gladiator's</h5>
             </section>
             <section class="secciones">
@@ -48,50 +48,50 @@
         <h1>Reportes de las Ventas Semanal</h1>
         <section class="fecha-mes">
             <!-- Aqui van las fechas XD -->
-            <h4>Fecha Inicio:</h4>
-            <h3>16/06/2024</h3>
-            <h4>Fecha Fin:</h4>
-            <h3>25/06/2024</h3>
+            <h3>Seleccione el rango de fechas:</h3>
+            <form method="GET" action="{{ url_for('reporte_semanal') }}">
+                <label for="fecha1">Fecha de Inicio: </label>
+                <input type="date" name="fecha1" required>
+                <label for="fecha2">Fecha de Fin: </label>
+                <input type="date" name="fecha2" required>
+                <button type="submit">Buscar</button>
+            </form>
         </section>
         <section class="table">
             <!-- Aqui va la tabla de las ventas semanal -->
             <table>
                 <thead>
-                    <tr>
+                    <tr class="fila">
                     <th>Id de laVenta</th>
                     <th>Fecha</th>
                     <th>Hora</th>
                     <th>Total</th>
                     <th>Cajero</th>
+                    <th></th>
                     </tr>
                 </thead>
                 <tbody>
+                    {% if datos %}
+                        {% for fila in datos %}
                     <tr>
-                        <td>64331857219</td>
-                        <td>16/06/2024</td>
-                        <td>9:40a.m</td>
-                        <td>80.0</td>
-                        <td>Grisel</td>
+                        <td>{{ fila[0] }}</td>
+                        <td>{{ fila[1] }}</td>
+                        <td>{{ fila[2] }}</td>
+                        <td>{{ fila[3] }}</td>
+                        <td>{{ fila[4] }}</td>
+                        <td><a href="{{ url_for('consulta_venta', id=fila[0]) }}">Ver</a></td>
                     </tr>
+                {% endfor %}
+            {% else %}
                     <tr>
-                        <td>64331857220</td>
-                        <td>16/06/2024</td>
-                        <td>10:20a.m</td>
-                        <td>3.50</td>
-                        <td>Larisa</td>
+                        <td colspan="6">No se encontraron ventas</td>
                     </tr>
-                    <tr>
-                        <td>64331857221</td>
-                        <td>16/06/2024</td>
-                        <td>12:40p.m</td>
-                        <td>50.0</td>
-                        <td>Larisa</td>
-                    </tr>
+                    {% endif %}
                 </tbody>
             </table>
             <div class="boton-total">
-                <!-- Aqui va el total y el boton para descargar -->
-                <h3>Total: $520</h3>
+            <!-- Aqui va el total y el boton para descargar -->
+            <h3>Total: ${{ total }}</h3>
                 <a href="ruta/al/archivo.ext" download="nombre_del_archivo.ext" class="descargar-boton">Descargar</a>
             </div>
         </section>
