--- a/templates/venta_confirmada.html
+++ b/templates/venta_confirmada.html
@@ -1,17 +1,23 @@
 <!DOCTYPE html>
-<html lang="es">
+<html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Confirmar la Venta</title>
+    <title>Venta Confirmada</title>
+    <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" rel="stylesheet">
 </head>
 <body>
-    <h1>Venta Confirmada</h1>
-    <p>Número de venta: {{ numero_venta }}</p>
-    <p>Fecha: {{ fecha }}</p>
-    <p>Hora: {{ hora }}</p>
-    <p>Atendido por: {{ usuario }}</p>
-    <p>Total: ${{ "%.2f" % total }}</p>
-    <a href="{{ url_for('registrar_venta') }}">Registrar otra venta</a>
+    <div class="container">
+        <h1>Venta Confirmada</h1>
+        <p>Número de venta: {{ numero_venta }}</p>
+        <p>Fecha: {{ fecha }}</p>
+        <p>Hora: {{ hora }}</p>
+        <p>Atendido por: {{ usuario }}</p>
+        <p>Total: ${{ "%.2f" % total }}</p>
+        <a href="{{ url_for('registrar_venta') }}">Registrar otra venta</a>
+    </div>
+    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"></script>
 </body>
 </html>
